<resources>
    <string name="app_name">Game</string>
    <string name="cpu">CPU : 0</string>
    <string name="player">YOU : 0</string>
    <string name="btn_higher">HIGHER</string>
    <string name="btn_lower">LOWER</string>
    <string name="imageView">imageView</string>
    <string name="cpu_die">cpu_die</string>
    <string name="LinearLayout">layout1</string>
    <string name="player_die">player_die</string>
    <string name="result"> </string>
</resources>