<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/newbackground"

        android:clipChildren="false"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="98dp"
            android:contentDescription="@string/imageView"
            android:maxWidth="100dp"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:clipChildren="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/cpu"
                android:gravity="center"
                android:text="@string/cpu"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cpu_die"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"

                android:contentDescription="@string/cpu_die"
                app:srcCompat="@drawable/dice3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"

                android:layout_marginTop="20dp"
                android:contentDescription="@string/player"
                android:text="@string/player"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/player_die"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"

                android:layout_marginTop="20dp"
                android:contentDescription="@string/player_die"
                app:srcCompat="@drawable/dice4" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/result"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_higher"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:contentDescription="@string/btn_higher"
                android:text="@string/btn_higher"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_lower"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:text="@string/btn_lower" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>